Bug 56255 - qt_runtime fails to compile on Solaris 10/Sun Studio 12 C++
Summary: qt_runtime fails to compile on Solaris 10/Sun Studio 12 C++
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Other
: P2 Normal
Assignee: Nobody
URL:
Keywords:
: 42013 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-12 12:07 PST by Ben Taylor
Modified: 2011-03-28 10:50 PDT (History)
2 users (show)

See Also:


Attachments
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler (1.45 KB, patch)
2011-03-12 12:15 PST, Ben Taylor
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Taylor 2011-03-12 12:07:00 PST
Compiling qt-4.7.1 on Solaris 10 with Sun Studio 12 C++, qt_runtime.o fails to build due to the following error:

pkgbuild: "bridge/runtime_array.h", line 53: Error: Type name expected instead of "Bindings".
pkgbuild: "bridge/runtime_array.h", line 53: Error: Cannot use int* to initialize JSC::Bindings::Array*.
Comment 1 Ben Taylor 2011-03-12 12:15:29 PST
Created attachment 85600 [details]
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler

This patch is on webkit head, but the similar patch on qt-4.7.1 on Solaris 10 with Sun Studio 12 C++ compiles correctly.
Comment 2 Adam Barth 2011-03-15 02:25:24 PDT
Comment on attachment 85600 [details]
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler

Ok.  We're likely to break this compile accidentally in the future, however.
Comment 3 WebKit Commit Bot 2011-03-15 03:34:03 PDT
Comment on attachment 85600 [details]
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler

Clearing flags on attachment: 85600

Committed r81126: <http://trac.webkit.org/changeset/81126>
Comment 4 WebKit Commit Bot 2011-03-15 03:34:07 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 WebKit Commit Bot 2011-03-15 05:07:24 PDT
The commit-queue encountered the following flaky tests while processing attachment 85600 [details]:

http/tests/xmlhttprequest/cross-origin-no-authorization.html bug 33357 (author: ap@webkit.org)
The commit-queue is continuing to process your patch.
Comment 6 Pavel Heimlich (hajma) 2011-03-28 10:50:07 PDT
*** Bug 42013 has been marked as a duplicate of this bug. ***