2011-03-15  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=56255
        Fix build on Solaris 10/Sun Studio 12 C++

        No new tests. This is to fix compilation on Solaris 10 with Sun Studio 12 C++

        * bridge/runtime_array.h:
        (JSC::RuntimeArray::getConcreteArray):

Canonical link: https://commits.webkit.org/71006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81126 268f45cc-cd09-0410-ab3c-d52691b4dbfc